Adding new Google sheets and removing old scripts

--- a/notebooks/03_ingest_samples.ipynb
+++ b/notebooks/03_ingest_samples.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Get-the-Sample-Plates-from-the-Google-Sheet\" data-toc-modified-id=\"Get-the-Sample-Plates-from-the-Google-Sheet-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Get the Sample Plates from the Google Sheet</a></span></li><li><span><a href=\"#Get-the-Picogreen-Data-from-the-Google-Sheet\" data-toc-modified-id=\"Get-the-Picogreen-Data-from-the-Google-Sheet-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get the Picogreen Data from the Google Sheet</a></span></li><li><span><a href=\"#Output-the-Sample-Data\" data-toc-modified-id=\"Output-the-Sample-Data-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Output the Sample Data</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Get-the-Sample-Plates-from-the-Google-Sheet\" data-toc-modified-id=\"Get-the-Sample-Plates-from-the-Google-Sheet-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Get the Sample Plates from the Google Sheet</a></span></li><li><span><a href=\"#Get-the-Picogreen-Data-from-the-Google-Sheet\" data-toc-modified-id=\"Get-the-Picogreen-Data-from-the-Google-Sheet-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get the Picogreen Data from the Google Sheet</a></span></li><li><span><a href=\"#Get-Data-Sent-to-Rapid-from-Google-Sheet\" data-toc-modified-id=\"Get-Data-Sent-to-Rapid-from-Google-Sheet-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Get Data Sent to Rapid from Google Sheet</a></span></li><li><span><a href=\"#Get-Replated-Rapid--Data-from-Google-Sheet\" data-toc-modified-id=\"Get-Replated-Rapid--Data-from-Google-Sheet-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Get Replated Rapid  Data from Google Sheet</a></span></li><li><span><a href=\"#Output-the-Sample-Data\" data-toc-modified-id=\"Output-the-Sample-Data-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Output the Sample Data</a></span></li></ul></div>"
    ]
   },
   {
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
@@ -440,12 +441,333 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Output the Sample Data"
+    "# Get Data Sent to Rapid from Google Sheet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_sort</th>\n",
+       "      <th>col_sort</th>\n",
+       "      <th>rapid_id</th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>concentration</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>rapid_concentration</th>\n",
+       "      <th>rapid_volume</th>\n",
+       "      <th>source_plate</th>\n",
+       "      <th>source_well</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FMN_131001_P01_WA01</td>\n",
+       "      <td>a89546ed-2278-4e25-a9a2-0836d223fb6b</td>\n",
+       "      <td>63.60</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>FMN_131001_P01_WA02</td>\n",
+       "      <td>c84c6871-887f-479e-bf1e-ff1c68b1c490</td>\n",
+       "      <td>30.57</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>FMN_131001_P01_WA03</td>\n",
+       "      <td>c8ed1cae-805a-49a9-8234-af21d8c0d6a0</td>\n",
+       "      <td>52.03</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "      <td>FMN_131001_P01_WA04</td>\n",
+       "      <td>c8c33923-6d14-42ea-a879-2418426d7708</td>\n",
+       "      <td>79.16</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>33</td>\n",
+       "      <td>FMN_131001_P01_WA05</td>\n",
+       "      <td>c89c6644-9f5a-4405-ada4-486827e7ce14</td>\n",
+       "      <td>178.59</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_sort  col_sort             rapid_id  \\\n",
+       "0         1         1  FMN_131001_P01_WA01   \n",
+       "1         2         9  FMN_131001_P01_WA02   \n",
+       "2         3        17  FMN_131001_P01_WA03   \n",
+       "3         4        25  FMN_131001_P01_WA04   \n",
+       "4         5        33  FMN_131001_P01_WA05   \n",
+       "\n",
+       "                              sample_id  concentration  volume  comments  \\\n",
+       "0  a89546ed-2278-4e25-a9a2-0836d223fb6b          63.60    33.0       NaN   \n",
+       "1  c84c6871-887f-479e-bf1e-ff1c68b1c490          30.57    33.0       NaN   \n",
+       "2  c8ed1cae-805a-49a9-8234-af21d8c0d6a0          52.03    33.0       NaN   \n",
+       "3  c8c33923-6d14-42ea-a879-2418426d7708          79.16    33.0       NaN   \n",
+       "4  c89c6644-9f5a-4405-ada4-486827e7ce14         178.59    33.0       NaN   \n",
+       "\n",
+       "   rapid_concentration  rapid_volume source_plate source_well  \n",
+       "0                  NaN           NaN          P01         A01  \n",
+       "1                  NaN           NaN          P01         A02  \n",
+       "2                  NaN           NaN          P01         A03  \n",
+       "3                  NaN           NaN          P01         A04  \n",
+       "4                  NaN           NaN          P01         A05  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path = INTERIM_DATA / 'rapid_input.csv'\n",
+    "\n",
+    "google.sheet_to_csv(\n",
+    "    'FMN_131001_Normal_Plate_Layout_03-21-2018_20-22-03.xlsx', csv_path)\n",
+    "\n",
+    "rapid_input = pd.read_csv(\n",
+    "    csv_path,\n",
+    "    header=0,\n",
+    "    skiprows=1,\n",
+    "    names=[\n",
+    "        'row_sort', 'col_sort', 'rapid_id', 'sample_id', 'concentration',\n",
+    "        'volume', 'comments', 'rapid_concentration', 'rapid_volume'])\n",
+    "\n",
+    "source_plate = re.compile(r'^[A-Za-z]+_\\d+_(P\\d+)_W\\w+$')\n",
+    "rapid_input['source_plate'] = rapid_input.rapid_id.str.extract(\n",
+    "    source_plate, expand=False)\n",
+    "\n",
+    "source_well = re.compile(r'^[A-Za-z]+_\\d+_P\\d+_W(\\w+)$')\n",
+    "rapid_input['source_well'] = rapid_input.rapid_id.str.extract(\n",
+    "    source_well, expand=False)\n",
+    "\n",
+    "rapid_input.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Replated Rapid  Data from Google Sheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_sort</th>\n",
+       "      <th>source_plate</th>\n",
+       "      <th>source_well</th>\n",
+       "      <th>source_well_no</th>\n",
+       "      <th>dest_plate</th>\n",
+       "      <th>dest_well</th>\n",
+       "      <th>dest_well_no</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>dest1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A02</td>\n",
+       "      <td>2</td>\n",
+       "      <td>dest1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A03</td>\n",
+       "      <td>3</td>\n",
+       "      <td>dest1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A04</td>\n",
+       "      <td>4</td>\n",
+       "      <td>dest1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>P01</td>\n",
+       "      <td>A05</td>\n",
+       "      <td>5</td>\n",
+       "      <td>dest1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_sort source_plate source_well  source_well_no dest_plate  dest_well  \\\n",
+       "0         1          P01         A01               1      dest1        NaN   \n",
+       "1         2          P01         A02               2      dest1        NaN   \n",
+       "2         3          P01         A03               3      dest1        NaN   \n",
+       "3         4          P01         A04               4      dest1        NaN   \n",
+       "4         5          P01         A05               5      dest1        NaN   \n",
+       "\n",
+       "   dest_well_no  volume  comments  \n",
+       "0           NaN     NaN       NaN  \n",
+       "1           NaN     NaN       NaN  \n",
+       "2           NaN     NaN       NaN  \n",
+       "3           NaN     NaN       NaN  \n",
+       "4           NaN     NaN       NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path = INTERIM_DATA / 'rapid_wells.csv'\n",
+    "\n",
+    "google.sheet_to_csv('Standard Reformatting Template.xlsx', csv_path)\n",
+    "\n",
+    "rapid_wells = pd.read_csv(\n",
+    "    csv_path,\n",
+    "    header=0,\n",
+    "    names=[\n",
+    "        'row_sort', 'source_plate', 'source_well', 'source_well_no',\n",
+    "        'dest_plate', 'dest_well', 'dest_well_no', 'volume', 'comments'])\n",
+    "\n",
+    "rapid_wells.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output the Sample Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,13 +787,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = 'picogreen'\n",
     "picogreen.to_sql(name, CXN, if_exists='replace', index=False)\n",
     "picogreen.to_csv(PROCESSED_DATA / f'{name}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'rapid_input'\n",
+    "rapid_input.to_sql(name, CXN, if_exists='replace', index=False)\n",
+    "rapid_input.to_csv(PROCESSED_DATA / f'{name}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'rapid_wells'\n",
+    "rapid_wells.to_sql(name, CXN, if_exists='replace', index=False)\n",
+    "rapid_wells.to_csv(PROCESSED_DATA / f'{name}.csv', index=False)"
    ]
   },
   {
