--- a/notebooks/04_sample_plate_report.ipynb
+++ b/notebooks/04_sample_plate_report.ipynb
@@ -66,11 +66,21 @@
    "source": [
     "def get_wells(cxn):\n",
     "    sql = \"\"\"\n",
-    "        SELECT wells.*, scientific_name, ng_microliter_mean, family\n",
+    "        SELECT wells.*,\n",
+    "               scientific_name,\n",
+    "               ng_microliter_mean,\n",
+    "               family,\n",
+    "               rapid_input.concentration AS input_concentration,\n",
+    "               rapid_input.volume AS rapid_input_volume,\n",
+    "               rapid_input.rapid_concentration,\n",
+    "               rapid_input.rapid_volume,\n",
+    "               rapid_wells.volume AS rapid_well_volume\n",
     "          FROM wells\n",
     "          JOIN taxon_ids ON (wells.sample_id = taxon_ids.id)\n",
     "          JOIN taxonomy USING (scientific_name)\n",
     "     LEFT JOIN picogreen USING (picogreen_id)\n",
+    "     LEFT JOIN rapid_input USING (sample_id)\n",
+    "     LEFT JOIN rapid_wells USING (source_plate, source_well)\n",
     "        ORDER BY local_no, row, col\n",
     "    \"\"\"\n",
     "    wells = pd.read_sql(sql, cxn)\n",
