--- a/notebooks/create_manifests.ipynb
+++ b/notebooks/create_manifests.ipynb
@@ -2,39 +2,266 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc": true
+   },
    "source": [
-    "# Create manifests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from os.path import basename\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import lib.db as db\n",
-    "import lib.util as util"
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#CalAcademy-Manifest\" data-toc-modified-id=\"CalAcademy-Manifest-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>CalAcademy Manifest</a></span></li><li><span><a href=\"#MOBOT-Manifest-(Old)\" data-toc-modified-id=\"MOBOT-Manifest-(Old)-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>MOBOT Manifest (Old)</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MOBOT Manifest"
+    "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os.path import basename\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import lib.db as db\n",
+    "import lib.util as util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "CXN = db.connect()\n",
     "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CalAcademy Manifest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2589\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_file</th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>scientific_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R0001833.JPG</td>\n",
+       "      <td>4360e849-b172-4ed9-973f-c5899b17842c</td>\n",
+       "      <td>Begonia acetosella</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R0001851.JPG</td>\n",
+       "      <td>45ed57c1-fcbc-4aca-adaa-1c3938c9cf24</td>\n",
+       "      <td>Begonia almedana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R0001852.JPG</td>\n",
+       "      <td>45e91b4e-fca1-485e-9dce-bb030900a807</td>\n",
+       "      <td>Begonia angustiloba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R0001853.JPG</td>\n",
+       "      <td>45e3b5f1-9f85-4b15-b96c-ca03aca2148d</td>\n",
+       "      <td>Begonia aptera</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>R0001799.JPG</td>\n",
+       "      <td>445bbcdd-0827-40bf-89a6-bc11f0652765</td>\n",
+       "      <td>Begonia arborescens</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_file                             sample_id      scientific_name\n",
+       "0  R0001833.JPG  4360e849-b172-4ed9-973f-c5899b17842c   Begonia acetosella\n",
+       "1  R0001851.JPG  45ed57c1-fcbc-4aca-adaa-1c3938c9cf24     Begonia almedana\n",
+       "2  R0001852.JPG  45e91b4e-fca1-485e-9dce-bb030900a807  Begonia angustiloba\n",
+       "3  R0001853.JPG  45e3b5f1-9f85-4b15-b96c-ca03aca2148d       Begonia aptera\n",
+       "4  R0001799.JPG  445bbcdd-0827-40bf-89a6-bc11f0652765  Begonia arborescens"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    SELECT image_file, raw_images.sample_id, scientific_name FROM raw_images\n",
+    "      JOIN taxon_ids ON (taxon_ids.id = raw_images.sample_id)\n",
+    "     WHERE image_file LIKE '%/CAS-DOE-nitfix_specimen_photos/%'\n",
+    "\"\"\"\n",
+    "images = pd.read_sql(sql, CXN)\n",
+    "\n",
+    "images.image_file = images.image_file.str.extract(r'.*/(.*)', expand=False)\n",
+    "\n",
+    "print(len(images))\n",
+    "images.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R0000614.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R0001311.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R0001361.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R0002092.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>R0002349.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>R0002381.JPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>R0002641.JPG</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_file\n",
+       "0  R0000614.JPG\n",
+       "1  R0001311.JPG\n",
+       "2  R0001361.JPG\n",
+       "3  R0002092.JPG\n",
+       "4  R0002349.JPG\n",
+       "5  R0002381.JPG\n",
+       "6  R0002641.JPG"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    SELECT image_file FROM image_errors\n",
+    "     WHERE image_file LIKE '%/CAS-DOE-nitfix_specimen_photos/%'\n",
+    "\"\"\"\n",
+    "errors = pd.read_sql(sql, CXN)\n",
+    "errors.image_file = errors.image_file.str.extract(r'.*/(.*)', expand=False)\n",
+    "\n",
+    "print(len(errors))\n",
+    "errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images.to_csv(INTERIM_DATA / 'cas_manifest.csv', index=False)\n",
+    "errors.to_csv(INTERIM_DATA / 'cas_manifest_missing.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MOBOT Manifest (Old)"
    ]
   },
   {
@@ -290,20 +517,6 @@
     "missing_images = images[missing]\n",
     "len(missing_images)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -323,6 +536,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
