--- a/notebooks/misc_utilities.ipynb
+++ b/notebooks/misc_utilities.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Add-Families-to-Picogreen-Results\" data-toc-modified-id=\"Add-Families-to-Picogreen-Results-1\">Add Families to Picogreen Results</a></span></li><li><span><a href=\"#Assign-UUIDs-to-Corrales-Samples\" data-toc-modified-id=\"Assign-UUIDs-to-Corrales-Samples-2\">Assign UUIDs to Corrales Samples</a></span></li><li><span><a href=\"#Get-Numbers-of-Families-per-Plate\" data-toc-modified-id=\"Get-Numbers-of-Families-per-Plate-3\">Get Numbers of Families per Plate</a></span></li><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-4\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-5\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-6\">Picogreen Yields</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Add-Families-to-Picogreen-Results\" data-toc-modified-id=\"Add-Families-to-Picogreen-Results-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Add Families to Picogreen Results</a></span></li><li><span><a href=\"#Assign-UUIDs-to-Corrales-Samples\" data-toc-modified-id=\"Assign-UUIDs-to-Corrales-Samples-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Assign UUIDs to Corrales Samples</a></span></li><li><span><a href=\"#Get-Numbers-of-Families-per-Plate\" data-toc-modified-id=\"Get-Numbers-of-Families-per-Plate-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get Numbers of Families per Plate</a></span></li><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Assign UUIDs to UFIB (Pilot Study) Images</a></span></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Picogreen Yields</a></span></li><li><span><a href=\"#Scan-MOBOT-Data-Dump\" data-toc-modified-id=\"Scan-MOBOT-Data-Dump-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Scan MOBOT Data Dump</a></span></li><li><span><a href=\"#Validate-DB\" data-toc-modified-id=\"Validate-DB-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Validate DB</a></span></li><li><span><a href=\"#UUIDs-as-Base-64\" data-toc-modified-id=\"UUIDs-as-Base-64-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>UUIDs as Base-64</a></span></li></ul></div>"
    ]
   },
   {
@@ -1085,11 +1085,261 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scan MOBOT Data Dump\n",
+    "\n",
+    "Scan the MOBOT data dump for matches in the database."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "from tqdm import tqdm\n",
+    "from lib.dict_attr import DictAttrs\n",
+    "import lib.db as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = Path('.') / 'data'\n",
+    "MOBOT_DIR = DATA_DIR / 'dwca-tropicosspecimens-v1.17'\n",
+    "CONTINENTS_FILE = DATA_DIR / 'Continents'\n",
+    "OCCURRENCE = MOBOT_DIR / 'occurrence.txt'\n",
+    "IN_AFRICA = DATA_DIR / 'mobot_in_africa.txt'\n",
+    "INTERSECTION = DATA_DIR / 'mobot_nitfix_africa.txt'\n",
+    "COUNTRY_CODES = [\n",
+    "    'DZ', 'AO', 'SH', 'BJ', 'BW', 'BF', 'BI', 'CM', 'CV', 'CF', 'TD', 'KM',\n",
+    "    'CG', 'CD', 'DJ', 'EG', 'GQ', 'ER', 'ET', 'GA', 'GM', 'GH', 'GN', 'GW',\n",
+    "    'CI', 'KE', 'LS', 'LR', 'LY', 'MG', 'MW', 'ML', 'MR', 'MU', 'YT', 'MA',\n",
+    "    'MZ', 'NA', 'NE', 'NG', 'ST', 'RE', 'RW', 'ST', 'SN', 'SC', 'SL', 'SO',\n",
+    "    'ZA', 'SS', 'SH', 'SD', 'SZ', 'TZ', 'TG', 'TN', 'UG', 'CD', 'ZM', 'TZ',\n",
+    "    'ZW'\n",
+    "]\n",
+    "CONTINENTS = gpd.read_file(str(CONTINENTS_FILE))\n",
+    "AFRICA = CONTINENTS.iloc[3, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mobot_data():\n",
+    "    \"\"\"Look at the MOBOT occurrence data.\"\"\"\n",
+    "    count = 0\n",
+    "    country = 0\n",
+    "    continent = 0\n",
+    "    country_code = 0\n",
+    "    decimal_latitude = 0\n",
+    "    decimal_longitude = 0\n",
+    "    genus = 0\n",
+    "    specific_epithet = 0\n",
+    "    scientific_name = 0\n",
+    "\n",
+    "    with open(OCCURRENCE) as in_file:\n",
+    "        reader = csv.DictReader(in_file, delimiter='\\t')\n",
+    "        print(reader.fieldnames)\n",
+    "        for row in tqdm(reader):\n",
+    "            row = DictAttrs(row)\n",
+    "            count += 1\n",
+    "            country += 1 if row.country else 0\n",
+    "            continent += 1 if row.continent else 0\n",
+    "            country_code += 1 if row.countryCode else 0\n",
+    "            decimal_latitude += 1 if row.decimalLatitude else 0\n",
+    "            decimal_longitude += 1 if row.decimalLongitude else 0\n",
+    "            genus += 1 if genus else 0\n",
+    "            specific_epithet += 1 if row.specificEpithet else 0\n",
+    "            scientific_name += 1 if row.scientificName else 0\n",
+    "\n",
+    "    print('count', count)\n",
+    "    print('country', country)\n",
+    "    print('continent', continent)\n",
+    "    print('countryCode', country_code)\n",
+    "    print('decimalLatitude', decimal_latitude)\n",
+    "    print('decimalLongitude', decimal_longitude)\n",
+    "    print('genus', genus)\n",
+    "    print('specificEpithet', specific_epithet)\n",
+    "    print('scientificName', scientific_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mobot_in_africa():\n",
+    "    \"\"\"Scan the MOBOT data dump for records in Africa.\"\"\"\n",
+    "    in_africa = set()\n",
+    "\n",
+    "    with open(OCCURRENCE) as in_file:\n",
+    "        reader = csv.DictReader(in_file, delimiter='\\t')\n",
+    "        for row in tqdm(reader):\n",
+    "            row = DictAttrs(row)\n",
+    "            if inside_africa(row):\n",
+    "                phylo = row.scientificName.split()\n",
+    "                sci_name = ' '.join(phylo[:2])\n",
+    "                in_africa.add(sci_name)\n",
+    "\n",
+    "    with open(str(IN_AFRICA), 'w') as out_file:\n",
+    "        for sci_name in sorted(in_africa):\n",
+    "            out_file.write('{}\\n'.format(sci_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inside_africa(row):\n",
+    "    \"\"\"Test if the occurrence record is for Africa.\"\"\"\n",
+    "    if row.countryCode in COUNTRY_CODES:\n",
+    "        return True\n",
+    "\n",
+    "    if row.continent.lower() == 'africa':\n",
+    "        return True\n",
+    "\n",
+    "    if row.decimalLatitude and row.decimalLongitude:\n",
+    "        point = Point(float(row.decimalLatitude), float(row.decimalLongitude))\n",
+    "        if AFRICA.contains(point):\n",
+    "            return True\n",
+    "\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nitfix_in_africa():\n",
+    "    \"\"\"Look for matching nitfix records in the mobo scrap.\"\"\"\n",
+    "    cxn = db.connect(factory=db.attr_factory)\n",
+    "    taxa = {t.scientific_name for t in db.get_taxon_names(cxn)}\n",
+    "    with open(str(IN_AFRICA)) as in_file:\n",
+    "        mobot = in_file.readlines()\n",
+    "    mobot = {ln.strip() for ln in mobot}\n",
+    "    print('Length mobot', len(mobot))\n",
+    "    print('Length nitfix', len(taxa))\n",
+    "    intersection = mobot & taxa\n",
+    "    print(len(intersection))\n",
+    "\n",
+    "    with open(str(INTERSECTION), 'w') as out_file:\n",
+    "        for taxon in sorted(intersection):\n",
+    "            out_file.write('{}\\n'.format(taxon))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scan_mobot():\n",
+    "    \"\"\"Run the script.\"\"\"\n",
+    "    csv.field_size_limit(sys.maxsize)\n",
+    "    # mobot_data()\n",
+    "    mobot_in_africa()\n",
+    "    nitfix_in_africa()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scan_mobot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validate DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os.path import join\n",
+    "import uuid\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def audit():\n",
+    "    \"\"\"Check the database.\"\"\"\n",
+    "    select = 'SELECT * FROM images'\n",
+    "\n",
+    "    db_path = join('data', 'nitfix.sqlite.db')\n",
+    "    with sqlite3.connect(db_path) as cxn:\n",
+    "        cursor = cxn.cursor()\n",
+    "        cursor.execute(select)\n",
+    "\n",
+    "        for row in cursor.fetchall():\n",
+    "            guid = row[0]\n",
+    "            try:\n",
+    "                uuid.UUID(guid)\n",
+    "            except ValueError:\n",
+    "                print(f'Bad UUID \"{guid}\"')  # noqa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UUIDs as Base-64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "import base64\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    guid = uuid.uuid4()\n",
+    "    short = base64.b64encode(guid.bytes).decode('utf-8')\n",
+    "    print(guid, '\\t', short)"
+   ]
   }
  ],
  "metadata": {
@@ -1112,8 +1362,8 @@
   },
   "toc": {
    "nav_menu": {},
-   "number_sections": false,
-   "sideBar": false,
+   "number_sections": true,
+   "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
@@ -1122,9 +1372,9 @@
     "height": "48px",
     "left": "1107px",
     "top": "111.133px",
-    "width": "159px"
+    "width": "251px"
    },
-   "toc_section_display": false,
+   "toc_section_display": true,
    "toc_window_display": false
   }
  },
