--- a/notebooks/02_ingest_taxonomy.ipynb
+++ b/notebooks/02_ingest_taxonomy.ipynb
@@ -639,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9002\n"
+      "9687\n"
      ]
     },
     {
@@ -881,7 +881,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9000\n"
+      "9685\n"
      ]
     },
     {
@@ -1045,7 +1045,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8935\n"
+      "9619\n"
      ]
     },
     {
@@ -1984,7 +1984,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3491c4f1f0>"
+       "<sqlite3.Cursor at 0x7f60a162d030>"
       ]
      },
      "execution_count": 20,
@@ -2007,7 +2007,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f3491c4f650>"
+       "<sqlite3.Cursor at 0x7f60a162d500>"
       ]
      },
      "execution_count": 21,
