--- a/notebooks/02_ingest_taxonomy.ipynb
+++ b/notebooks/02_ingest_taxonomy.ipynb
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38655\n"
+      "38656\n"
      ]
     },
     {
@@ -639,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9687\n"
+      "10113\n"
      ]
     },
     {
@@ -881,7 +881,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9685\n"
+      "10111\n"
      ]
     },
     {
@@ -1045,7 +1045,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9619\n"
+      "10043\n"
      ]
     },
     {
@@ -1984,7 +1984,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f60a162d030>"
+       "<sqlite3.Cursor at 0x7f6560bf9420>"
       ]
      },
      "execution_count": 20,
@@ -2007,7 +2007,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f60a162d500>"
+       "<sqlite3.Cursor at 0x7f6560bf97a0>"
       ]
      },
      "execution_count": 21,
