--- a/notebooks/audit_data.ipynb
+++ b/notebooks/audit_data.ipynb
@@ -81,11 +81,11 @@
     "def check_image_sample_ids():\n",
     "    sql = \"\"\"\n",
     "        WITH dups AS (SELECT sample_id, COUNT(*) AS n\n",
-    "                        FROM raw_images\n",
+    "                        FROM images\n",
     "                    GROUP BY sample_id\n",
     "                    HAVING n > 1)\n",
     "        SELECT *\n",
-    "          FROM raw_images\n",
+    "          FROM images\n",
     "         WHERE sample_id IN (SELECT sample_id FROM dups)\n",
     "      ORDER BY sample_id\n",
     "    \"\"\"\n",
@@ -254,7 +254,7 @@
     "                    HAVING n > 1)\n",
     "        SELECT id, scientific_name, image_file\n",
     "          FROM taxon_ids\n",
-    "          JOIN raw_images ON (id = raw_images.sample_id)\n",
+    "          JOIN images ON (id = images.sample_id)\n",
     "         WHERE id IN (SELECT id FROM dups)\n",
     "      ORDER BY id\n",
     "    \"\"\"\n",
@@ -289,16 +289,16 @@
     "        pattern = os.fspath(util.IMAGE_ROOT_UP / image_dir / '*.JPG')\n",
     "        image_files += len(glob(pattern))\n",
     "\n",
-    "    sql = \"\"\"SELECT COUNT(*) FROM raw_images\"\"\"\n",
+    "    sql = \"\"\"SELECT COUNT(*) FROM images\"\"\"\n",
     "    image_recs = CXN.execute(sql).fetchone()[0]\n",
     "\n",
     "    errors = CXN.execute('SELECT COUNT(*) FROM image_errors').fetchone()[0]\n",
     "\n",
-    "    sql = \"\"\"SELECT COUNT(*) FROM raw_images\n",
+    "    sql = \"\"\"SELECT COUNT(*) FROM images\n",
     "              WHERE image_file LIKE 'UFBI_sample_photos/%'\"\"\"\n",
     "    pilot = CXN.execute(sql).fetchone()[0]\n",
     "\n",
-    "    sql = \"\"\"SELECT COUNT(*) FROM raw_images\n",
+    "    sql = \"\"\"SELECT COUNT(*) FROM images\n",
     "              WHERE image_file LIKE 'missing_photos/%'\"\"\"\n",
     "    missing = CXN.execute(sql).fetchone()[0]\n",
     "\n",
@@ -351,19 +351,19 @@
     "        files = {util.normalize_file_name(x) for x in glob(pattern)}\n",
     "        image_files |= files\n",
     "\n",
-    "    sql = \"\"\"SELECT * FROM raw_images\"\"\"\n",
+    "    sql = \"\"\"SELECT * FROM images\"\"\"\n",
     "    image_recs = CXN.execute(sql).fetchall()\n",
     "    image_recs = {x[0] for x in image_recs}\n",
     "\n",
     "    errors = CXN.execute('SELECT * FROM image_errors').fetchall()\n",
     "    errors = {x[0] for x in errors}\n",
     "\n",
-    "    sql = \"\"\"SELECT * FROM raw_images\n",
+    "    sql = \"\"\"SELECT * FROM images\n",
     "              WHERE image_file LIKE 'UFBI_sample_photos/%'\"\"\"\n",
     "    pilot = CXN.execute(sql).fetchall()\n",
     "    pilot = {x[0] for x in pilot}\n",
     "\n",
-    "    sql = \"\"\"SELECT * FROM raw_images\n",
+    "    sql = \"\"\"SELECT * FROM images\n",
     "              WHERE image_file LIKE 'missing_photos/%'\"\"\"\n",
     "    missing = CXN.execute(sql).fetchall()\n",
     "    missing = {x[0] for x in missing}\n",
